# json

./: .clang-format  .clangdoc  .cmake-format.py  .eslintrc.js  .sparse-export  .travis.yml  CMakeLists.txt  Makefile  README.rst  apt-requirements-bionic.txt  pip-requirements.txt  requirements.txt
argue/: BUILD  CMakeLists.txt  README.rst  action.cc  action.tcc  argue.cc  argue.h  argue_glog.cc  argue_glog.h  argue_macros.h  demo.cc  keywords.tcc  kwargs.cc  kwargs.tcc  parse.cc  parser.cc  parser.h  stash.h  storage_model.tcc
argue/bash_completion.d/: argue-argcomplete
argue/doc/: CMakeLists.txt  changelog.rst  conf.py  todo.rst
argue/examples/: argparse_example.cc
argue/test/: arg_test.cc  assert_test.cc  execution_tests.py  macro_test.cc  parse_test.cc
cmake/: codestyle.cmake  doctools.cmake  environment.cmake  get_version_from_header.py  pkgconfig.cmake  validate_lint_manifest.py  wrappers.cmake
json/: BUILD  CMakeLists.txt  builder.cc  builder.h  emit.cc  emit.h  emit_std.cc  emit_std.h  item.cc  item.h  json.cc  json.h  json_gen.cc.tpl  json_gen.h.tpl  json_gen.py  json_std.h  libtangent-json.pc  main.cc  parse.cc  parse.h  parse_std.cc  parse_std.h  pipeline.cc  pipeline.h  stream.cc  stream.h  stream_macros.h  stream_std.cc  stream_std.h  stream_std_tpl.h  stream_tpl.h  type_registry.cc  type_registry.h  util.cc  util.h  variant.cc  variant.h
json/doc/: CMakeLists.txt  README.rst  changelog.rst  conf.py  index.rst  stream.rst  todo.rst
json/test/: CMakeLists.txt  builder_test.cc  frontend_tests.py  lexer_test.cc  macro_test.cc  parser_test.cc  registry_poc.cc  stream_gen_test.cc  stream_gen_test.h  stream_test.cc  test_types.py  type_registry_test.cc  variant_test.cc
tangent/: CMakeLists.txt
tangent/json/: BUILD  CMakeLists.txt  builder.cc  builder.h  item.cc  item.h  json.cc  json.h  json_gen.h.tpl  libtangent-json-config.cmake  libtangent-json.pc  main.cc  parse.cc  parse.h  pipeline.cc  pipeline.h  stream_macros.h  type_registry.cc  type_registry.h  util.cc  variant.cc  variant.h
tangent/json/doc/: CMakeLists.txt  conf.py
tangent/json/test/: CMakeLists.txt  builder_test.cc  frontend_tests.md  lexer_test.cc  parser_test.cc  stream_gen_test.cc  stream_test.cc  test_types.py  type_registry_test.cc  variant_test.cc
tangent/tooling/: .gitignore  CMakeLists.txt  debhelp.py  export_sparse_subrepo.py
tangent/tooling/deploy_keys/: libtangent-json-rtd.enc  libtangent-json.enc
util/: BUILD  CMakeLists.txt  binary_literal.h  bitset.h  bitset_test.cc  container_of.h  fixed_string_stream.h  fixed_string_stream_test.cc  hash_tpl.h  inline_math.h  linked.cc  linked.h  linked.hpp  linked_test.cc  null_out.h  range.hpp  redblack.cc  redblack.h  redblack_test.cc  set_operations.hpp  stack_trace.cc  string_util.cc  string_util.h  svg_artist.cc  svg_artist.h  timespec.h  type_string.h  type_string_test.cc
